fix external link decoration on iOS

--- a/website/src/styles/style.scss
+++ b/website/src/styles/style.scss
@@ -561,7 +561,7 @@ main {
     padding: 0 sp( 1.75 );
     margin-left: sp( 0.5 );
     background: currentColor;
-    mask-size: contain;
+    mask-size: sp( 2 * 1.75 ) $line-height-base * $sp-4;
     mask-repeat: no-repeat;
     mask-position: center;
     mask-image: url( 'lucide-static/icons/external-link.svg' );
